--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Multiplayer agar.io clone",
   "main": "server/index.js",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite",
     "server": "nodemon ./server/index.js",
+    "watch": "vite build --watch",
+    "build": "vite build --watch",
+    "dev": "vite",
     "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "keywords": [
